--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Explore a variety of indoor plants for your home or office.">
@@ -11,98 +12,403 @@
       background-color: #f9f9f9;
       color: #333;
       margin: 0;
+      padding: 0;
       line-height: 1.6;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
+
     header {
       text-align: center;
       padding: 2rem;
       background-color: #e8f5e9;
       border-bottom: 2px solid #c8e6c9;
     }
-    h1 { margin: 0; font-size: 2.5rem; color: #2e7d32; }
+
+    h1 {
+      margin: 0;
+      font-size: 2.5rem;
+      color: #2e7d32;
+    }
+
     main {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
       gap: 2rem;
       padding: 2rem;
-      max-width: 1000px;
+      max-width: 1200px;
       margin: auto;
+      flex-grow: 1;
     }
+
     .plant-card {
       background: #fff;
       border: 1px solid #ddd;
       border-radius: 12px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.05);
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
       padding: 1rem;
       text-align: center;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
+
     .plant-card:hover {
       transform: translateY(-5px);
-      box-shadow: 0 8px 16px rgba(0,0,0,0.1);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     }
-    img {
+
+    .plant-card img {
       max-width: 100%;
       height: auto;
       border-radius: 8px;
       margin-bottom: 1rem;
     }
-    .price { font-weight: bold; color: #d32f2f; }
-    button {
-      margin-top: 1rem;
+
+    h2 {
+      font-size: 1.5rem;
+      color: #388e3c;
+      margin-bottom: 0.5rem;
+    }
+
+    p {
+      margin: 0.5rem 0;
+    }
+
+    .price {
+      font-weight: bold;
+      margin-top: 0.5rem;
+      color: #d32f2f;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 0.5rem;
       padding: 0.6rem 1.2rem;
-      background: #2e7d32;
-      color: #fff;
+      background-color: #2e7d32;
+      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
-      transition: background 0.2s ease;
+      font-size: 1rem;
+      transition: background-color 0.2s ease, transform 0.2s ease;
     }
-    button:hover { background: #1b5e20; }
+
+    .btn:hover {
+      background-color: #1b5e20;
+      transform: scale(1.05);
+    }
+
+    /* Cart Section */
+    #cart {
+      background: #fff;
+      border: 2px solid #c8e6c9;
+      border-radius: 12px;
+      padding: 1.5rem;
+      margin: 2rem auto;
+      max-width: 600px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+    }
+
+    #cart h2 {
+      color: #2e7d32;
+      margin-top: 0;
+    }
+
+    #cart ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    #cart ul li {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0.5rem 0;
+      border-bottom: 1px solid #eee;
+    }
+
+    .remove-btn {
+      background-color: #d32f2f;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      padding: 0.3rem 0.8rem;
+      cursor: pointer;
+      font-size: 0.9rem;
+      transition: background-color 0.2s ease;
+    }
+
+    .remove-btn:hover {
+      background-color: #9a0007;
+    }
+
+    .cart-actions {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 1rem;
+    }
+
+    .clear-btn {
+      background-color: #f57c00;
+    }
+
+    .clear-btn:hover {
+      background-color: #e65100;
+    }
+
+    .checkout-btn {
+      background-color: #1976d2;
+    }
+
+    .checkout-btn:hover {
+      background-color: #0d47a1;
+    }
+
+    #cart p {
+      font-weight: bold;
+      margin-top: 1rem;
+    }
+
+    footer {
+      background-color: #2e7d32;
+      color: white;
+      text-align: center;
+      padding: 1.5rem;
+      margin-top: auto;
+    }
+
+    footer p {
+      margin: 0.3rem 0;
+    }
+
+    footer a {
+      color: #ffeb3b;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    footer a:hover {
+      text-decoration: underline;
+    }
+
+    /* Modal Styles */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.6);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .modal-content {
+      background: #fff;
+      padding: 2rem;
+      border-radius: 12px;
+      max-width: 500px;
+      width: 90%;
+      text-align: center;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+      animation: fadeIn 0.3s ease;
+    }
+
+    .modal-content h3 {
+      margin-top: 0;
+      color: #2e7d32;
+    }
+
+    .modal-content ul {
+      list-style: none;
+      padding: 0;
+      margin: 1rem 0;
+      text-align: left;
+    }
+
+    .modal-content li {
+      margin: 0.5rem 0;
+    }
+
+    .modal-content p {
+      font-weight: bold;
+      margin-top: 1rem;
+    }
+
+    .close-btn {
+      background: #d32f2f;
+      margin-top: 1rem;
+    }
+
+    .close-btn:hover {
+      background: #9a0007;
+    }
+
+    .continue-btn {
+      background: #388e3c;
+      margin-top: 1rem;
+    }
+
+    .continue-btn:hover {
+      background: #1b5e20;
+    }
+
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
   </style>
 </head>
+
 <body>
   <header>
     <h1>Indoor Plants</h1>
     <p>Bring nature into your home with our popular indoor plants.</p>
   </header>
 
-  <main>
+  <main id="products">
     <section class="plant-card">
       <h2>Peace Lily</h2>
       <img src="https://edube.org/uploads/media/default/0001/04/spathiphyllum-peace-lily.jpg" alt="Peace Lily">
       <p>The Peace Lily, known for its elegant white flowers, is a popular choice for indoor spaces.</p>
-      <p class="price">$15</p>
-      <button onclick="checkout([{ name: 'Peace Lily', price: 15, quantity: 1 }])">Buy Now</button>
+      <p class="price">Price: $15</p>
+      <button class="btn" onclick="addToCart('Peace Lily', 15)">Add to Cart</button>
     </section>
 
     <section class="plant-card">
       <h2>Zanzibar Gem</h2>
       <img src="https://edube.org/uploads/media/default/0001/04/zamioculcas-zanzibar-gem.jpg" alt="Zanzibar Gem">
       <p>The Zanzibar Gem, with its glossy green foliage, is a low-maintenance indoor plant perfect for beginners.</p>
-      <p class="price">$20</p>
-      <button onclick="checkout([{ name: 'Zanzibar Gem', price: 20, quantity: 1 }])">Buy Now</button>
+      <p class="price">Price: $20</p>
+      <button class="btn" onclick="addToCart('Zanzibar Gem', 20)">Add to Cart</button>
     </section>
   </main>
 
+  <!-- Shopping Cart -->
+  <section id="cart">
+    <h2>🛒 Shopping Cart</h2>
+    <ul id="cart-items">
+      <li>No items in cart yet.</li>
+    </ul>
+    <p id="cart-total">Total: $0</p>
+
+    <div class="cart-actions">
+      <button class="btn clear-btn" onclick="clearCart()">Clear Cart</button>
+      <button class="btn checkout-btn" onclick="checkout()">Checkout</button>
+    </div>
+  </section>
+
+  <!-- Checkout Modal -->
+  <div id="checkout-modal" class="modal">
+    <div class="modal-content">
+      <h3>Order Summary</h3>
+      <ul id="order-summary"></ul>
+      <p id="order-total"></p>
+      <button class="btn continue-btn" onclick="continueShopping()">Continue Shopping</button>
+      <button class="btn close-btn" onclick="closeModal()">Close</button>
+    </div>
+  </div>
+
+  <footer>
+    <p><strong>Bloom & Petal Haven</strong></p>
+    <p>123 Green Street, Garden City</p>
+    <p>Phone: <a href="tel:+1234567890">+1 (234) 567-890</a></p>
+    <p>Email: <a href="mailto:info@bloomandpetal.com">info@bloomandpetal.com</a></p>
+    <p><a href="#">Visit Us</a> for more plants and gifts 🌸</p>
+  </footer>
+
   <script>
-    async function checkout(items) {
-      const res = await fetch('/api/create-checkout-session', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({
-          items,
-          successUrl: window.location.origin + '/success',
-          cancelUrl: window.location.origin
-        })
-      });
-      const data = await res.json();
-      if (data.url) {
-        window.location.href = data.url;
+    let cart = [];
+
+    function addToCart(plantName, price) {
+      const item = cart.find(product => product.name === plantName);
+      if (item) {
+        item.quantity++;
       } else {
-        alert('Checkout failed.');
+        cart.push({ name: plantName, price: price, quantity: 1 });
       }
+      renderCart();
+    }
+
+    function removeFromCart(index) {
+      if (cart[index].quantity > 1) {
+        cart[index].quantity--;
+      } else {
+        cart.splice(index, 1);
+      }
+      renderCart();
+    }
+
+    function clearCart() {
+      cart = [];
+      renderCart();
+    }
+
+    function checkout() {
+      if (cart.length === 0) {
+        alert("Your cart is empty. Please add items before checking out.");
+        return;
+      }
+
+      const summaryList = document.getElementById("order-summary");
+      const orderTotal = document.getElementById("order-total");
+      summaryList.innerHTML = "";
+      let total = 0;
+
+      cart.forEach(item => {
+        const li = document.createElement("li");
+        li.textContent = `${item.name} × ${item.quantity} = $${item.price * item.quantity}`;
+        summaryList.appendChild(li);
+        total += item.price * item.quantity;
+      });
+
+      orderTotal.textContent = `Total: $${total}`;
+      document.getElementById("checkout-modal").style.display = "flex";
+      clearCart();
+    }
+
+    function closeModal() {
+      document.getElementById("checkout-modal").style.display = "none";
+    }
+
+    function continueShopping() {
+      closeModal();
+      document.getElementById("products").scrollIntoView({ behavior: "smooth" });
+    }
+
+    function renderCart() {
+      const cartItems = document.getElementById("cart-items");
+      const cartTotal = document.getElementById("cart-total");
+
+      cartItems.innerHTML = "";
+      let total = 0;
+
+      if (cart.length === 0) {
+        cartItems.innerHTML = "<li>No items in cart yet.</li>";
+      } else {
+        cart.forEach((item, index) => {
+          total += item.price * item.quantity;
+          const li = document.createElement("li");
+          li.innerHTML = `
+            ${item.name} - $${item.price} × ${item.quantity} = $${item.price * item.quantity}
+            <button class="remove-btn" onclick="removeFromCart(${index})">Remove</button>
+          `;
+          cartItems.appendChild(li);
+        });
+      }
+
+      cartTotal.textContent = `Total: $${total}`;
     }
   </script>
 </body>
+
 </html>
