Addition of products.json file

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="description" content="Explore a variety of indoor plants for your home or office.">
@@ -18,20 +17,17 @@
       flex-direction: column;
       min-height: 100vh;
     }
-
     header {
       text-align: center;
       padding: 2rem;
       background-color: #e8f5e9;
       border-bottom: 2px solid #c8e6c9;
     }
-
     h1 {
       margin: 0;
       font-size: 2.5rem;
       color: #2e7d32;
     }
-
     main {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
@@ -41,7 +37,6 @@
       margin: auto;
       flex-grow: 1;
     }
-
     .plant-card {
       background: #fff;
       border: 1px solid #ddd;
@@ -51,35 +46,27 @@
       text-align: center;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
-
     .plant-card:hover {
       transform: translateY(-5px);
       box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
     }
-
     .plant-card img {
       max-width: 100%;
       height: auto;
       border-radius: 8px;
       margin-bottom: 1rem;
     }
-
     h2 {
       font-size: 1.5rem;
       color: #388e3c;
       margin-bottom: 0.5rem;
     }
-
-    p {
-      margin: 0.5rem 0;
-    }
-
+    p { margin: 0.5rem 0; }
     .price {
       font-weight: bold;
       margin-top: 0.5rem;
       color: #d32f2f;
     }
-
     .btn {
       display: inline-block;
       margin-top: 0.5rem;
@@ -92,12 +79,10 @@
       font-size: 1rem;
       transition: background-color 0.2s ease, transform 0.2s ease;
     }
-
     .btn:hover {
       background-color: #1b5e20;
       transform: scale(1.05);
     }
-
     /* Cart Section */
     #cart {
       background: #fff;
@@ -108,17 +93,8 @@
       max-width: 600px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
     }
-
-    #cart h2 {
-      color: #2e7d32;
-      margin-top: 0;
-    }
-
-    #cart ul {
-      list-style: none;
-      padding: 0;
-    }
-
+    #cart h2 { color: #2e7d32; margin-top: 0; }
+    #cart ul { list-style: none; padding: 0; }
     #cart ul li {
       display: flex;
       justify-content: space-between;
@@ -126,7 +102,6 @@
       padding: 0.5rem 0;
       border-bottom: 1px solid #eee;
     }
-
     .remove-btn {
       background-color: #d32f2f;
       color: white;
@@ -137,38 +112,17 @@
       font-size: 0.9rem;
       transition: background-color 0.2s ease;
     }
-
-    .remove-btn:hover {
-      background-color: #9a0007;
-    }
-
+    .remove-btn:hover { background-color: #9a0007; }
     .cart-actions {
       display: flex;
       justify-content: space-between;
       margin-top: 1rem;
     }
-
-    .clear-btn {
-      background-color: #f57c00;
-    }
-
-    .clear-btn:hover {
-      background-color: #e65100;
-    }
-
-    .checkout-btn {
-      background-color: #1976d2;
-    }
-
-    .checkout-btn:hover {
-      background-color: #0d47a1;
-    }
-
-    #cart p {
-      font-weight: bold;
-      margin-top: 1rem;
-    }
-
+    .clear-btn { background-color: #f57c00; }
+    .clear-btn:hover { background-color: #e65100; }
+    .checkout-btn { background-color: #1976d2; }
+    .checkout-btn:hover { background-color: #0d47a1; }
+    #cart p { font-weight: bold; margin-top: 1rem; }
     footer {
       background-color: #2e7d32;
       color: white;
@@ -176,122 +130,23 @@
       padding: 1.5rem;
       margin-top: auto;
     }
-
-    footer p {
-      margin: 0.3rem 0;
-    }
-
+    footer p { margin: 0.3rem 0; }
     footer a {
       color: #ffeb3b;
       text-decoration: none;
       font-weight: bold;
     }
-
-    footer a:hover {
-      text-decoration: underline;
-    }
-
-    /* Modal Styles */
-    .modal {
-      display: none;
-      position: fixed;
-      z-index: 1000;
-      left: 0;
-      top: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0, 0, 0, 0.6);
-      justify-content: center;
-      align-items: center;
-    }
-
-    .modal-content {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 12px;
-      max-width: 500px;
-      width: 90%;
-      text-align: center;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
-      animation: fadeIn 0.3s ease;
-    }
-
-    .modal-content h3 {
-      margin-top: 0;
-      color: #2e7d32;
-    }
-
-    .modal-content ul {
-      list-style: none;
-      padding: 0;
-      margin: 1rem 0;
-      text-align: left;
-    }
-
-    .modal-content li {
-      margin: 0.5rem 0;
-    }
-
-    .modal-content p {
-      font-weight: bold;
-      margin-top: 1rem;
-    }
-
-    .close-btn {
-      background: #d32f2f;
-      margin-top: 1rem;
-    }
-
-    .close-btn:hover {
-      background: #9a0007;
-    }
-
-    .continue-btn {
-      background: #388e3c;
-      margin-top: 1rem;
-    }
-
-    .continue-btn:hover {
-      background: #1b5e20;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
+    footer a:hover { text-decoration: underline; }
   </style>
 </head>
-
 <body>
   <header>
     <h1>Indoor Plants</h1>
     <p>Bring nature into your home with our popular indoor plants.</p>
   </header>
 
-  <main id="products">
-    <section class="plant-card">
-      <h2>Peace Lily</h2>
-      <img src="https://edube.org/uploads/media/default/0001/04/spathiphyllum-peace-lily.jpg" alt="Peace Lily">
-      <p>The Peace Lily, known for its elegant white flowers, is a popular choice for indoor spaces.</p>
-      <p class="price">Price: $15</p>
-      <button class="btn" onclick="addToCart('Peace Lily', 15)">Add to Cart</button>
-    </section>
-
-    <section class="plant-card">
-      <h2>Zanzibar Gem</h2>
-      <img src="https://edube.org/uploads/media/default/0001/04/zamioculcas-zanzibar-gem.jpg" alt="Zanzibar Gem">
-      <p>The Zanzibar Gem, with its glossy green foliage, is a low-maintenance indoor plant perfect for beginners.</p>
-      <p class="price">Price: $20</p>
-      <button class="btn" onclick="addToCart('Zanzibar Gem', 20)">Add to Cart</button>
-    </section>
-  </main>
+  <!-- Products will be injected here -->
+  <main id="products"></main>
 
   <!-- Shopping Cart -->
   <section id="cart">
@@ -300,23 +155,11 @@
       <li>No items in cart yet.</li>
     </ul>
     <p id="cart-total">Total: $0</p>
-
     <div class="cart-actions">
       <button class="btn clear-btn" onclick="clearCart()">Clear Cart</button>
       <button class="btn checkout-btn" onclick="checkout()">Checkout</button>
     </div>
   </section>
-
-  <!-- Checkout Modal -->
-  <div id="checkout-modal" class="modal">
-    <div class="modal-content">
-      <h3>Order Summary</h3>
-      <ul id="order-summary"></ul>
-      <p id="order-total"></p>
-      <button class="btn continue-btn" onclick="continueShopping()">Continue Shopping</button>
-      <button class="btn close-btn" onclick="closeModal()">Close</button>
-    </div>
-  </div>
 
   <footer>
     <p><strong>Bloom & Petal Haven</strong></p>
@@ -329,12 +172,40 @@
   <script>
     let cart = [];
 
-    function addToCart(plantName, price) {
-      const item = cart.find(product => product.name === plantName);
+    // Fetch products.json and render product cards
+    async function loadProducts() {
+      try {
+        const response = await fetch("/products.json");
+        const products = await response.json();
+
+        const productsContainer = document.getElementById("products");
+        productsContainer.innerHTML = "";
+
+        products.forEach(product => {
+          const card = document.createElement("section");
+          card.className = "plant-card";
+          card.innerHTML = `
+            <h2>${product.name}</h2>
+            <img src="${product.image}" alt="${product.name}">
+            <p>${product.description}</p>
+            <p class="price">Price: $${product.price}</p>
+            <button class="btn" onclick="addToCart('${product.name}', ${product.price}, '${product.priceId}')">
+              Add to Cart
+            </button>
+          `;
+          productsContainer.appendChild(card);
+        });
+      } catch (err) {
+        console.error("Failed to load products:", err);
+      }
+    }
+
+    function addToCart(plantName, price, priceId) {
+      const item = cart.find(product => product.priceId === priceId);
       if (item) {
         item.quantity++;
       } else {
-        cart.push({ name: plantName, price: price, quantity: 1 });
+        cart.push({ name: plantName, price, priceId, quantity: 1 });
       }
       renderCart();
     }
@@ -353,36 +224,37 @@
       renderCart();
     }
 
-    function checkout() {
+    async function checkout() {
       if (cart.length === 0) {
         alert("Your cart is empty. Please add items before checking out.");
         return;
       }
 
-      const summaryList = document.getElementById("order-summary");
-      const orderTotal = document.getElementById("order-total");
-      summaryList.innerHTML = "";
-      let total = 0;
+      try {
+        const response = await fetch("/api/create-checkout-session", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({
+            items: cart.map(item => ({
+              priceId: item.priceId,
+              quantity: item.quantity
+            })),
+            successUrl: window.location.origin + "/success.html",
+            cancelUrl: window.location.origin + "/cancel.html"
+          })
+        });
 
-      cart.forEach(item => {
-        const li = document.createElement("li");
-        li.textContent = `${item.name} × ${item.quantity} = $${item.price * item.quantity}`;
-        summaryList.appendChild(li);
-        total += item.price * item.quantity;
-      });
+        const data = await response.json();
 
-      orderTotal.textContent = `Total: $${total}`;
-      document.getElementById("checkout-modal").style.display = "flex";
-      clearCart();
-    }
-
-    function closeModal() {
-      document.getElementById("checkout-modal").style.display = "none";
-    }
-
-    function continueShopping() {
-      closeModal();
-      document.getElementById("products").scrollIntoView({ behavior: "smooth" });
+        if (data.url) {
+          window.location.href = data.url;
+        } else {
+          alert("Error creating checkout session.");
+        }
+      } catch (err) {
+        console.error(err);
+        alert("Something went wrong with checkout.");
+      }
     }
 
     function renderCart() {
@@ -408,7 +280,9 @@
 
       cartTotal.textContent = `Total: $${total}`;
     }
+
+    // Load products on page load
+    loadProducts();
   </script>
 </body>
-
 </html>
